--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="Imagens/icon-provy.png" type="ïmage/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <title>Vite App</title>
   </head>
   <body>
